Revert padding fram til STP